--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0192.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0192.html
@@ -195,11 +195,6 @@
             <ins class="alt" title="nlp 1.00">5</ins>
           </span>
         </span>
-        <span id="w_33" class="ocr_word" title="bbox 435 620 630 659" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">κούργου</ins>
-          </span>
-        </span>
         <span id="w_34" class="ocr_word" title="bbox 680 618 930 658" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">γενομένων</ins>
@@ -494,9 +489,14 @@
             <ins class="alt" title="nlp 1.00">ἂν</ins>
           </span>
         </span>
-        <span id="w_92" class="ocr_word" title="bbox 1227 1026 1310 1081">
+        <span id="w_92_0" class="ocr_word" title="bbox 1227 1026 1310 1081">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;ᾖ&amp;#x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;003C;ᾖ&amp;003E;</ins>
+          </span>
+        </span>
+        <span id="w_92_1" class="ocr_word" title="bbox 1227 1026 1310 1081">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_93" class="ocr_word" title="bbox 1345 1027 1437 1082" lang="grc">
@@ -527,11 +527,6 @@
         <span id="w_98" class="ocr_word" title="bbox 2009 1025 2071 1075" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">εἰς</ins>
-          </span>
-        </span>
-        <span id="w_99" class="ocr_word" title="bbox 2103 1042 2177 1067" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">αὐτὴν</ins>
           </span>
         </span>
       </span>
@@ -578,16 +573,11 @@
         </span>
         <span id="w_109" class="ocr_word" title="bbox 1932 1108 2175 1153" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">παρασκευ-</ins>
+            <ins title="nlp 2.00">παρασκευάζειν</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 436 1165 1774 1227">
-        <span id="w_110" class="ocr_word" title="bbox 436 1173 556 1223" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">άζειν</ins>
-          </span>
-        </span>
         <span id="w_111" class="ocr_word" title="bbox 586 1171 792 1227" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">περιττὸν</ins>
