--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0195.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0195.html
@@ -27,21 +27,21 @@
       <span class="ocr_line" title="bbox 372 1047 507 1096">
         <span id="w_2" class="ocr_word" title="bbox 372 1047 507 1096">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">S7A7</ins>
+            <ins title="nlp 2.00">S7A7</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 371 1114 537 1169">
         <span id="w_3" class="ocr_word" title="bbox 371 1114 537 1169">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">1903a</ins>
+            <ins title="nlp 2.00">1903a</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 368 1184 466 1230">
         <span id="w_4" class="ocr_word" title="bbox 368 1184 466 1230">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">v.l</ins>
+            <ins title="nlp 2.00">v.l</ins>
           </span>
         </span>
       </span>
@@ -88,8 +88,7 @@
         </span>
         <span id="w_11" class="ocr_word" title="bbox 1147 1078 1382 1127">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">veterua</ins>
-            <del title="nlp 0.90">veterua</del>
+            <ins title="nlp 2.00">veterum</ins>
           </span>
         </span>
       </span>
@@ -134,7 +133,7 @@
         </span>
         <span id="w_18" class="ocr_word" title="bbox 665 1885 747 1934" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὅ</ins>
+            <ins title="nlp 2.00">OR</ins>
           </span>
         </span>
         <span id="w_19" class="ocr_word" title="bbox 784 1886 921 1937">
