--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0061.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0061.html
@@ -16,14 +16,9 @@
             <del title="nlp 0.90">VITA.</del>
           </span>
         </span>
-        <span id="w_1" class="ocr_word" title="bbox 1966 172 1985 215">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">1</ins>
-          </span>
-        </span>
         <span id="w_2" class="ocr_word" title="bbox 1998 171 2016 214">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">1</ins>
+            <ins class="alt" title="nlp 2.00">11</ins>
           </span>
         </span>
       </span>
@@ -75,7 +70,7 @@
         </span>
         <span id="w_11" class="ocr_word" title="bbox 1394 283 1551 326">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">1034a.</ins>
+            <ins title="nlp 2.00">1034a.</ins>
           </span>
         </span>
         <span id="w_12" class="ocr_word" title="bbox 1618 283 1776 337" lang="grc">
@@ -296,12 +291,12 @@
         </span>
         <span id="w_55" class="ocr_word" title="bbox 446 641 528 699" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μὶν</ins>
+            <ins title="nlp 2.00">μἐν</ins>
           </span>
         </span>
         <span id="w_56" class="ocr_word" title="bbox 559 643 618 693" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὃς</ins>
+            <ins title="nlp 2.00">ὡς</ins>
           </span>
         </span>
         <span id="w_57" class="ocr_word" title="bbox 650 641 699 685" lang="grc">
@@ -663,16 +658,11 @@
         </span>
         <span id="w_126" class="ocr_word" title="bbox 1955 1069 2025 1110" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">λό-</ins>
+            <ins title="nlp 2.00">λόγοις</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 277 1139 2027 1200">
-        <span id="w_127" class="ocr_word" title="bbox 277 1160 370 1200" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">γοις</ins>
-          </span>
-        </span>
         <span id="w_128" class="ocr_word" title="bbox 408 1143 480 1187" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
@@ -846,11 +836,6 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 277 1353 2026 1416">
-        <span id="w_161" class="ocr_word" title="bbox 277 1372 470 1416" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">γήρασεν</ins>
-          </span>
-        </span>
         <span id="w_162" class="ocr_word" title="bbox 510 1375 536 1415" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἢ</ins>
@@ -1055,7 +1040,7 @@
         </span>
         <span id="w_202" class="ocr_word" title="bbox 1109 1647 1135 1698" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">ξ</ins>
+            <ins title="nlp 2.00">§</ins>
           </span>
         </span>
         <span id="w_203" class="ocr_word" title="bbox 1155 1645 1182 1686">
@@ -1525,8 +1510,7 @@
         </span>
         <span id="w_292" class="ocr_word" title="bbox 1853 2217 2029 2268">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">accessU,</ins>
-            <del title="nlp 0.90">accessU,</del>
+            <ins title="nlp 2.00">accessit,</ins>
           </span>
         </span>
       </span>
@@ -1609,7 +1593,7 @@
         </span>
         <span id="w_306" class="ocr_word" title="bbox 1334 2360 1376 2418" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὁ</ins>
+            <ins title="nlp 2.00">(ὁ</ins>
           </span>
         </span>
         <span id="w_307" class="ocr_word" title="bbox 1396 2360 1521 2418" lang="grc">
@@ -1765,7 +1749,7 @@
         </span>
         <span id="w_336" class="ocr_word" title="bbox 1532 2574 1647 2633" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τ)ῆς</ins>
+            <ins title="nlp 2.00">(τ)ῆς</ins>
           </span>
         </span>
         <span id="w_337" class="ocr_word" title="bbox 1690 2576 1789 2632" lang="grc">
@@ -1778,9 +1762,9 @@
             <ins class="alt" title="nlp 1.00">τὴν</ins>
           </span>
         </span>
-        <span id="w_339" class="ocr_word" title="bbox 1927 2574 2029 2630" lang="grc">
+        <span id="w_339_0" class="ocr_word" title="bbox 1927 2574 2029 2630">
           <span class="alternatives">
-            <ins title="nlp 2.00">(ψυκὴν)</ins>
+            <ins class="alt" title="nlp 2.00">(ψυχὴν)</ins>
           </span>
         </span>
       </span>
@@ -1933,7 +1917,7 @@
       <span class="ocr_line" title="bbox 288 2862 1740 2923">
         <span id="w_371" class="ocr_word" title="bbox 502 2863 584 2921" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μὶν</ins>
+            <ins title="nlp 2.00">μὲν</ins>
           </span>
         </span>
         <span id="w_372" class="ocr_word" title="bbox 614 2881 698 2921" lang="grc">
@@ -1948,7 +1932,7 @@
         </span>
         <span id="w_374" class="ocr_word" title="bbox 787 2862 1161 2921" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">Ἐπι)κούρει(ος)</ins>
+            <ins title="nlp 2.00">(Ἐπι)κούρει(ος)</ins>
           </span>
         </span>
         <span id="w_375" class="ocr_word" title="bbox 1194 2863 1242 2907" lang="grc">
@@ -2055,8 +2039,7 @@
         </span>
         <span id="w_392" class="ocr_word" title="bbox 627 3008 853 3051">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">mordlibus</ins>
-            <del title="nlp 0.90">mordlibus</del>
+            <ins title="nlp 2.00">moralibus</ins>
           </span>
         </span>
         <span id="w_393" class="ocr_word" title="bbox 895 3008 1200 3061">
@@ -2085,16 +2068,14 @@
         </span>
         <span id="w_397" class="ocr_word" title="bbox 1869 3006 2032 3048">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">dicUur.</ins>
-            <del title="nlp 0.90">dicUur.</del>
+            <ins title="nlp 2.00">dicitur.</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 290 3078 2086 3135">
         <span id="w_398" class="ocr_word" title="bbox 290 3080 534 3135">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ApoUodori</ins>
-            <del title="nlp 0.90">ApoUodori</del>
+            <ins title="nlp 2.00">Apollodori</ins>
           </span>
         </span>
         <span id="w_399" class="ocr_word" title="bbox 566 3081 715 3122">
