--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0062.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0062.html
@@ -64,9 +64,14 @@
             <del title="nlp 0.90">III.</del>
           </span>
         </span>
-        <span id="w_9" class="ocr_word" title="bbox 1197 311 1347 350" lang="grc">
+        <span id="w_9_0" class="ocr_word" title="bbox 1197 311 1347 350">
           <span class="alternatives">
-            <ins title="nlp 2.00">-μενος</ins>
+            <ins class="alt" title="nlp 2.00">-μενος</ins>
+          </span>
+        </span>
+        <span id="w_9_1" class="ocr_word" title="bbox 1197 311 1347 350">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_10" class="ocr_word" title="bbox 1378 294 1648 352" lang="grc">
@@ -89,11 +94,6 @@
             <ins class="alt" title="nlp 1.00">τοῦ</ins>
           </span>
         </span>
-        <span id="w_14" class="ocr_word" title="bbox 1968 305 2043 353" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τῆς</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 306 364 2042 424">
         <span id="w_15" class="ocr_word" title="bbox 306 368 468 416" lang="grc">
@@ -101,14 +101,14 @@
             <ins class="alt" title="nlp 1.00">οἰκείας</ins>
           </span>
         </span>
-        <span id="w_16_0" class="ocr_word" title="bbox 511 365 758 423">
+        <span id="w_16_1_0" class="ocr_word" title="bbox 511 365 758 423">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">αἱρ</ins>
+            <ins class="alt" title="nlp 2.00">αἱρ(έσεως)</ins>
           </span>
         </span>
-        <span id="w_16_1" class="ocr_word" title="bbox 511 365 758 423">
+        <span id="w_16_1_1" class="ocr_word" title="bbox 511 365 758 423">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">(έσεως)</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_17" class="ocr_word" title="bbox 788 366 792 423">
@@ -151,11 +151,6 @@
             <ins class="alt" title="nlp 1.00">κατὰ</ins>
           </span>
         </span>
-        <span id="w_25" class="ocr_word" title="bbox 1993 370 2042 411" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τὸ</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 304 435 2044 497">
         <span id="w_26" class="ocr_word" title="bbox 304 435 551 494" lang="grc">
@@ -165,8 +160,7 @@
         </span>
         <span id="w_27" class="ocr_word" title="bbox 581 438 585 492">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">I</ins>
-            <del title="nlp 0.90">I</del>
+            <ins title="nlp 2.00">|</ins>
           </span>
         </span>
         <span id="w_28" class="ocr_word" title="bbox 614 453 694 480" lang="grc">
@@ -246,21 +240,21 @@
             <ins title="nlp 2.00">|</ins>
           </span>
         </span>
-        <span id="w_43" class="ocr_word" title="bbox 1802 509 1844 566" lang="grc">
+        <span id="w_44_0" class="ocr_word" title="bbox 1868 510 2045 567">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὁ</ins>
+            <ins class="alt" title="nlp 2.00">(ὁ</ins>
           </span>
         </span>
-        <span id="w_44" class="ocr_word" title="bbox 1868 510 2045 567" lang="grc">
+        <span id="w_44_1" class="ocr_word" title="bbox 1868 510 2045 567">
           <span class="alternatives">
-            <ins title="nlp 2.00">(ὁ Ζήν)ων</ins>
+            <ins class="alt" title="nlp 2.00">Ζήν)ων</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 270 577 2044 637">
         <span id="w_45" class="ocr_word" title="bbox 270 595 285 621">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">6</ins>
+            <ins title="nlp 2.00">5</ins>
           </span>
         </span>
         <span id="w_46" class="ocr_word" title="bbox 307 581 369 629" lang="grc">
@@ -288,24 +282,24 @@
             <ins class="alt" title="nlp 1.00">τὴν</ins>
           </span>
         </span>
-        <span id="w_51" class="ocr_word" title="bbox 1238 595 1318 621" lang="grc">
+        <span id="w_51_0" class="ocr_word" title="bbox 1238 595 1318 621">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τοῦ</ins>
+            <ins class="alt" title="nlp 2.00">τοῦ</ins>
           </span>
         </span>
-        <span id="w_52" class="ocr_word" title="bbox 1369 577 1612 636" lang="grc">
+        <span id="w_51_1" class="ocr_word" title="bbox 1238 595 1318 621">
           <span class="alternatives">
-            <ins title="nlp 2.00">σὠ | (ματος ἀσθ)</ins>
+            <ins class="alt" title="nlp 2.00">σώ|(ματος</ins>
           </span>
         </span>
-        <span id="w_53" class="ocr_word" title="bbox 1660 579 1937 637" lang="grc">
+        <span id="w_54_0" class="ocr_word" title="bbox 1986 598 2044 632">
           <span class="alternatives">
-            <ins title="nlp 2.00">ένειαν,</ins>
+            <ins class="alt" title="nlp 2.00">ἀσθ)ένειαν,</ins>
           </span>
         </span>
-        <span id="w_54" class="ocr_word" title="bbox 1986 598 2044 632" lang="grc">
+        <span id="w_54_1" class="ocr_word" title="bbox 1986 598 2044 632">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὡς</ins>
+            <ins class="alt" title="nlp 2.00">ὡς</ins>
           </span>
         </span>
       </span>
@@ -373,8 +367,7 @@
         </span>
         <span id="w_65" class="ocr_word" title="bbox 1461 726 1623 764">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">audore</ins>
-            <del title="nlp 0.90">audore</del>
+            <ins title="nlp 2.00">auctore</ins>
           </span>
         </span>
         <span id="w_66" class="ocr_word" title="bbox 1652 724 1881 776">
@@ -422,8 +415,7 @@
         </span>
         <span id="w_74" class="ocr_word" title="bbox 1421 792 1559 835">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Laert.</ins>
-            <del title="nlp 0.90">Laert.</del>
+            <ins title="nlp 2.00">Laërt.</ins>
           </span>
         </span>
         <span id="w_75" class="ocr_word" title="bbox 1585 792 1668 836">
@@ -445,9 +437,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 305 863 667 921">
-        <span id="w_79" class="ocr_word" title="bbox 305 864 433 905">
+        <span id="w_79_0" class="ocr_word" title="bbox 305 864 433 905">
           <span class="alternatives">
-            <ins title="nlp 2.00">noluminis</ins>
+            <ins class="alt" title="nlp 2.00">voluminis</ins>
+          </span>
+        </span>
+        <span id="w_79_1" class="ocr_word" title="bbox 305 864 433 905">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_80" class="ocr_word" title="bbox 464 879 503 918">
@@ -459,11 +456,6 @@
         <span id="w_81" class="ocr_word" title="bbox 524 864 565 919">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">3,</ins>
-          </span>
-        </span>
-        <span id="w_82" class="ocr_word" title="bbox 581 863 667 921">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">10).</ins>
           </span>
         </span>
       </span>
@@ -533,9 +525,14 @@
             <ins class="alt" title="nlp 1.00">τοὺς</ins>
           </span>
         </span>
-        <span id="w_95" class="ocr_word" title="bbox 1750 953 1777 991">
+        <span id="w_95_0" class="ocr_word" title="bbox 1750 953 1777 991">
           <span class="alternatives">
-            <ins title="nlp 2.00">n</ins>
+            <ins class="alt" title="nlp 2.00">ῃ</ins>
+          </span>
+        </span>
+        <span id="w_95_1" class="ocr_word" title="bbox 1750 953 1777 991">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_96" class="ocr_word" title="bbox 1797 969 1806 978">
@@ -548,21 +545,16 @@
             <ins title="nlp 2.00">εασμοὺς </ins>
           </span>
         </span>
-        <span id="w_98" class="ocr_word" title="bbox 2037 936 2041 993">
-          <span class="alternatives">
-            <ins title="nlp 2.00">| </ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 306 1003 2045 1065">
         <span id="w_99" class="ocr_word" title="bbox 306 1004 494 1062" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">πρ)άως</ins>
+            <ins title="nlp 2.00">(πρ)άως</ins>
           </span>
         </span>
         <span id="w_100" class="ocr_word" title="bbox 534 1004 643 1063" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">κ)αὶ</ins>
+            <ins title="nlp 2.00">(κ)αὶ</ins>
           </span>
         </span>
         <span id="w_101" class="ocr_word" title="bbox 684 1011 929 1062" lang="grc">
@@ -582,7 +574,7 @@
         </span>
         <span id="w_104" class="ocr_word" title="bbox 1245 1004 1357 1062" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">κ)αὶ</ins>
+            <ins title="nlp 2.00">(κ)αὶ</ins>
           </span>
         </span>
         <span id="w_105" class="ocr_word" title="bbox 1399 1022 1536 1048" lang="grc">
@@ -612,7 +604,7 @@
         </span>
         <span id="w_110" class="ocr_word" title="bbox 1928 1006 2045 1065" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τὸ)ν</ins>
+            <ins title="nlp 2.00">(τὸ)ν</ins>
           </span>
         </span>
       </span>
@@ -927,8 +919,7 @@
         </span>
         <span id="w_169" class="ocr_word" title="bbox 1883 1432 1967 1475">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">VH</ins>
-            <del title="nlp 0.90">VH</del>
+            <ins title="nlp 2.00">VII</ins>
           </span>
         </span>
         <span id="w_170" class="ocr_word" title="bbox 1988 1434 2045 1476">
@@ -1033,8 +1024,7 @@
         </span>
         <span id="w_188" class="ocr_word" title="bbox 1674 1573 1781 1617">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">VIE</ins>
-            <del title="nlp 0.90">VIE</del>
+            <ins title="nlp 2.00">VIII</ins>
           </span>
         </span>
         <span id="w_189" class="ocr_word" title="bbox 1817 1590 1857 1630">
@@ -1058,7 +1048,7 @@
       <span class="ocr_line" title="bbox 252 1644 2044 1704">
         <span id="w_192" class="ocr_word" title="bbox 252 1661 286 1687">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">50</ins>
+            <ins title="nlp 2.00">20</ins>
           </span>
         </span>
         <span id="w_193" class="ocr_word" title="bbox 306 1646 567 1704" lang="grc">
@@ -1725,8 +1715,7 @@
         </span>
         <span id="w_311" class="ocr_word" title="bbox 761 2505 909 2559">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">opifecc,</ins>
-            <del title="nlp 0.90">opifecc,</del>
+            <ins title="nlp 2.00">opifex,</ins>
           </span>
         </span>
         <span id="w_312" class="ocr_word" title="bbox 937 2505 1172 2547">
@@ -1795,15 +1784,9 @@
             <del title="nlp 0.90">videbantur</del>
           </span>
         </span>
-        <span id="w_323" class="ocr_word" title="bbox 1241 2619 1492 2666">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Comparettio</ins>
-            <del title="nlp 0.90">Comparettio</del>
-          </span>
-        </span>
         <span id="w_324" class="ocr_word" title="bbox 1501 2634 1509 2663">
           <span class="alternatives">
-            <ins title="nlp 2.00">;</ins>
+            <ins title="nlp 2.00">Comparettio;</ins>
           </span>
         </span>
         <span id="w_325" class="ocr_word" title="bbox 1546 2619 1632 2664">
@@ -1814,8 +1797,7 @@
         </span>
         <span id="w_326" class="ocr_word" title="bbox 1666 2631 1740 2661">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">-og,</ins>
-            <del title="nlp 0.90">-og,</del>
+            <ins title="nlp 2.00">-ος,</ins>
           </span>
         </span>
         <span id="w_327" class="ocr_word" title="bbox 1779 2617 1900 2663">
@@ -1831,14 +1813,9 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 308 2671 2045 2718">
-        <span id="w_330" class="ocr_word" title="bbox 433 2688 452 2710" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">ο</ins>
-          </span>
-        </span>
         <span id="w_331" class="ocr_word" title="bbox 462 2689 470 2718">
           <span class="alternatives">
-            <ins title="nlp 2.00">;</ins>
+            <ins title="nlp 2.00">ο;</ins>
           </span>
         </span>
         <span id="w_332" class="ocr_word" title="bbox 509 2674 574 2710">
@@ -1926,8 +1903,7 @@
         </span>
         <span id="w_349" class="ocr_word" title="bbox 400 2728 549 2764">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Utterae</ins>
-            <del title="nlp 0.90">Utterae</del>
+            <ins title="nlp 2.00">litterae</ins>
           </span>
         </span>
         <span id="w_350" class="ocr_word" title="bbox 574 2741 594 2762" lang="grc">
@@ -1970,9 +1946,14 @@
             <del title="nlp 0.90">chiara</del>
           </span>
         </span>
-        <span id="w_357" class="ocr_word" title="bbox 1365 2726 1546 2768">
+        <span id="w_357_0" class="ocr_word" title="bbox 1365 2726 1546 2768">
           <span class="alternatives">
-            <ins title="nlp 2.00">traccia“;</ins>
+            <ins class="alt" title="nlp 2.00">traccia“;</ins>
+          </span>
+        </span>
+        <span id="w_357_1" class="ocr_word" title="bbox 1365 2726 1546 2768">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_358" class="ocr_word" title="bbox 1578 2735 1699 2769">
@@ -1984,12 +1965,6 @@
         <span id="w_359" class="ocr_word" title="bbox 1724 2723 1908 2768" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">θεάτρων,</ins>
-          </span>
-        </span>
-        <span id="w_360" class="ocr_word" title="bbox 1946 2724 2045 2769">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">quod</ins>
-            <del title="nlp 0.90">quod</del>
           </span>
         </span>
       </span>
@@ -2036,9 +2011,14 @@
             <del title="nlp 0.90">in</del>
           </span>
         </span>
-        <span id="w_368" class="ocr_word" title="bbox 1397 2793 1468 2814" lang="grc">
+        <span id="w_368_0" class="ocr_word" title="bbox 1397 2793 1468 2814">
           <span class="alternatives">
-            <ins title="nlp 2.00">-ων</ins>
+            <ins class="alt" title="nlp 2.00">-ων</ins>
+          </span>
+        </span>
+        <span id="w_368_1" class="ocr_word" title="bbox 1397 2793 1468 2814">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_369" class="ocr_word" title="bbox 1493 2779 1616 2814">
@@ -2056,11 +2036,6 @@
         <span id="w_371" class="ocr_word" title="bbox 1864 2781 1884 2813">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">5</ins>
-          </span>
-        </span>
-        <span id="w_372" class="ocr_word" title="bbox 1911 2778 2045 2813" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">δεῖπνα</ins>
           </span>
         </span>
       </span>
@@ -2160,8 +2135,7 @@
         </span>
         <span id="w_390" class="ocr_word" title="bbox 1239 2886 1438 2930">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Biicheler;</ins>
-            <del title="nlp 0.90">Biicheler;</del>
+            <ins title="nlp 2.00">Bücheler;</ins>
           </span>
         </span>
         <span id="w_391" class="ocr_word" title="bbox 1464 2886 1620 2922">
@@ -2297,8 +2271,7 @@
         </span>
         <span id="w_414" class="ocr_word" title="bbox 1620 2991 1812 3027">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Biicheler.</ins>
-            <del title="nlp 0.90">Biicheler.</del>
+            <ins title="nlp 2.00">Bücheler.</ins>
           </span>
         </span>
         <span id="w_415" class="ocr_word" title="bbox 1832 2993 1844 3036">
@@ -2374,9 +2347,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 311 3095 2045 3147">
-        <span id="w_427" class="ocr_word" title="bbox 311 3102 432 3138">
+        <span id="w_427_0" class="ocr_word" title="bbox 311 3102 432 3138">
           <span class="alternatives">
-            <ins title="nlp 2.00">Laërt.</ins>
+            <ins class="alt" title="nlp 2.00">Laërt.</ins>
+          </span>
+        </span>
+        <span id="w_427_1" class="ocr_word" title="bbox 311 3102 432 3138">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_428" class="ocr_word" title="bbox 452 3102 520 3138">
@@ -2436,11 +2414,6 @@
             <ins class="alt" title="nlp 1.00">Ἔμποδος</ins>
           </span>
         </span>
-        <span id="w_438" class="ocr_word" title="bbox 1952 3097 2045 3141">
-          <span class="alternatives">
-            <ins title="nlp 2.00">cod.,</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 312 3156 573 3192">
         <span id="w_439" class="ocr_word" title="bbox 312 3167 403 3192">
@@ -2451,8 +2424,7 @@
         </span>
         <span id="w_440" class="ocr_word" title="bbox 427 3156 573 3192">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Miiller.</ins>
-            <del title="nlp 0.90">Miiller.</del>
+            <ins title="nlp 2.00">Müller.</ins>
           </span>
         </span>
       </span>
